test/sema/pointer-to-rvalue-assign.delta.output
pointer-to-rvalue-assign.delta:8:7: error: cannot assign 'int' to 'int*?'
    p = foo();
      ^
