test/sema/pointer-to-rvalue-assign.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

int foo() { return 42; }

void main() {
    int*? p = null;
    // CHECK: [[@LINE+1]]:7: error: cannot assign 'int' to variable of type 'int*?'
    p = foo();
}
